--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,11 @@
-.navbar-default {
+.div-navbar {
     background: transparent;
     background-image: url("../img/img1/PavilaViajes2-01.jpg");
     border-color: transparent;
     box-shadow: none;
     height: 655px;
     background-repeat: no-repeat;
+    display: cover;
 }
 
 .divParent {
@@ -34,6 +35,16 @@
     left: 3%;
     width: 125px;
     height: 70px;
+}
+.phone-number {
+position: absolute;
+    top: 52%;
+    left: 14%;
+    
+    height: 75px;
+    color: #fff;
+    text-shadow: 4px 2px 5px #000;
+    font-size: 40px;
 }
 
 .divParentImg3 {
@@ -74,4 +85,60 @@
     right: 3%;
     width: 100px;
     height: 100px;
+}
+.navbar{
+    background: linear-gradient(#f8f9fa66, rgba(0, 0, 0, 0.19));
+    max-height: 80px;
+
+}
+.nav-link{
+    color:#fff;
+    text-decoration: none;
+    box-shadow: inset 3px 2px 6px #212529;
+    background: transparent;
+    font-size: 32px;
+    max-width: 424px;
+    text-shadow: 2px 2px #000;
+    opacity: 1;
+    display:cover;
+    margin: auto;
+    border-radius: 5px;
+    padding-left: auto;
+    padding-right: auto;
+   
+
+}
+a:hover{
+    color: darkgrey;
+    
+}
+a:link{
+    text-decoration: none;
+}
+.vendido{
+    background: rgba(183,183,191,19);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.19), #f8f9fa66);
+    padding-top: 38px;
+    align-items: center;
+}
+.vendido h1{
+    padding-left: 50px;
+    background:  rgba(184, 181, 193, 0.7);
+    color: #fff;
+    text-shadow:4px 2px 5px #000;
+    margin-bottom: 30px;
+    padding-bottom: 15px;
+    font-size: 50px;
+
+}
+.img-vendida{
+    padding:  8px;
+    margin: 8px;
+    display: cover;
+    width: 100%;
+    max-height: 370px;
+}
+.img-content{
+    margin-right: 40px;
+    margin-left: 40px;
 }
